--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
 	<head>
 		<title>Galgeleg</title>
+		
+		 <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		
 		<!-- Latest compiled and minified CSS -->
@@ -33,11 +37,6 @@
 			div {
 			border: 0px solid red;
 			}
-			body,html,h1 {
-				  margin:0;
-				  padding:0;
-			}
-			
 		</style>
 		
 	</head>
