--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 <!-- Content -->
 	<div class="positioning">
 	
-		<form id="login_form">
+
+		
+		<div style="width: 100%; display: table;">
+			<div style="display: table-row">
+				<div class="content left">
+					
+							<form id="login_form">
 		  <div class="form-group">
 			<label for="InputUsername">Brugernavn</label>
 			<input type="text" class="form-control" id="username" name="username" placeholder="Brugernavn">
@@ -42,6 +48,13 @@
 			<h1>Synligt ord</h1>
 			<div id="result"></div>
 		</form>
+					
+				</div>
+				<div class="content right">
+					Highscore
+				</div>
+			</div>
+		</div>
 		
 		<script>
 			$( document ).ready(function() {
