--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</div>
 							<div class="form-group">
 								<label for="exampleInputEmail1">Gæt et bogstav</label>
-								<input type="text" class="form-control" id="letter" name="letter" placeholder="Bogstav">
+								<input type="text" class="form-control" id="letter" name="letter" placeholder="Bogstav" autocomplete="off">
 								<div id="sendguess"></div>
 							</div>
 							<div id="invisibleword"></div>
