Works with online server
http://ubuntu4.saluton.dk:38055/RestServer/

--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
 								<div id="invisibleword"></div>
 								<div id="usedletters"></div>
 							</div>
-							<div class="form-group">
+							<div class="form-group" id="guess_box">
 								<label for="InputLetter">Gæt et bogstav</label>
 								<input type="text" class="form-control" id="letter" name="letter" placeholder="Bogstav" autocomplete="off">
 								<div id="result"></div>
+							</div>
+							<div class="form-group" id="retry_button">
+								<div id="result2"></div>
+								<button type="button" id="button" class="btn btn-default">Vil du prøve igen?</button>
 							</div>
 						</form>
 					</div>
